# facebook-mcp-server

./: .env.template  LICENSE  MANIFEST.in  README.md  config.json  pyproject.toml  server.py
just_facebook_mcp/: __init__.py  config.py  facebook_api.py  manager.py  server.py
